--- a/index.html
+++ b/index.html
@@ -3,18 +3,44 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
   <script src="/js/datamaps.world.min.js"></script>
   <script src="/js/utils.js"></script>
 </head>
 <body>
   <style media="screen">
     body { background-color: #3B8183; }
+    .hoverinfo {
+      font-size: 10px;
+    }
+    .hoverinfo td {
+      font-size: 10px;
+    }
   </style>
   <div id="map" style="position: relative; width: 100%; height: 100%;"></div>
+
+  <script type="text/template" id="popup-template">
+    <div class='hoverinfo'>
+      <strong>{{geo.properties.name}}</strong>
+      <br/>
+      Number of licences: {{data.count}}<br/>
+      Total amount: {{euro data.total_amount}}</br>
+      <table>
+      {{#each data.top_exports}}
+        <tr>
+          <td>{{@key}}</td> <td>{{euro this}}</td>
+        </tr>
+      {{/each}}
+      </table>
+    </div>
+  </script>
+
   <script>
   var paletteScale = d3.scale.linear()
         .domain([0, 10])
         .range(["#FFF", "#F38630"]);
+
+  var popupTemplate = Handlebars.compile($('#popup-template').html());
 
   $.getJSON('/data/countries.json', function(data) {
     var arcLines = [];
@@ -34,10 +60,7 @@
       data: data,
       geographyConfig: {
         popupTemplate: function(geo, data) {
-          return ['<div class="hoverinfo"><strong>' + geo.properties.name + '</strong><br/>',
-                  'Number of licences: ' + data.count + '<br/>',
-                  'Export: ' + euro(data.total_amount) + '<br/>',
-                  '</div>'].join('');
+          return popupTemplate({ geo: geo, data: data })
         },
       },
       arcConfig: {
